# human_aware_navigation

./: README.md
behavior_tree/: human_aware_navigation.xml
conflict_type/conflict_type_msgs/: CMakeLists.txt  package.xml
conflict_type/conflict_type_msgs/srv/: GetConflictType.srv
conflict_type/conflict_type_server/: CMakeLists.txt  package.xml
conflict_type/conflict_type_server/src/: conflict_type_server.cpp
human_gazebo_plugin/: CMakeLists.txt  package.xml
human_gazebo_plugin/include/human_gazebo_plugin/: ActorPlugin.hh  MoveToVehicle.hh  WorkerPlugin.hh
human_gazebo_plugin/src/: ActorPlugin.cc  MoveToVehicle.cc  WorkerPlugin.cc
motion_prediction/constant_velocity_prediction/: CMakeLists.txt  package.xml
motion_prediction/constant_velocity_prediction/include/constant_velocity_prediction/: constant_velocity_prediction.hpp
motion_prediction/constant_velocity_prediction/src/: constant_velocity_prediction.cpp
motion_prediction/nav_commander/: package.xml  setup.py
motion_prediction/nav_commander/nav_commander/: basic_nav.py
motion_prediction/people_msgs/: CMakeLists.txt  package.xml
motion_prediction/people_msgs/msg/: People.msg  PeoplePrediction.msg
motion_prediction/people_publisher/: CMakeLists.txt  package.xml
motion_prediction/people_publisher/launch/: constant_velocity_launch.py
motion_prediction/people_publisher/src/: people_publisher.cpp
nav2_custom_bt_nodes/: CMakeLists.txt  package.xml
nav2_custom_bt_nodes/include/nav2_custom_bt_nodes/: cancel_control_condition.hpp  detour_faster_condition.hpp  dynamic_wait_action.hpp  is_path_empty.hpp  is_path_updated.hpp  path_validity_check.hpp  stop_wait.hpp
nav2_custom_bt_nodes/src/: cancel_control_condition.cpp  detour_faster_condition.cpp  dynamic_wait_action.cpp  is_path_empty.cpp  is_path_updated.cpp  path_validity_check.cpp  stop_wait.cpp
nav2_human_dynamic_layer_costmap_plugin/: CMakeLists.txt  human_dynamic_layer.xml  package.xml
nav2_human_dynamic_layer_costmap_plugin/include/nav2_human_dynamic_layer_costmap_plugin/: human_dynamic_layer.hpp
nav2_human_dynamic_layer_costmap_plugin/src/: human_dynamic_layer.cpp
path_validity_check_server/: CMakeLists.txt  package.xml
path_validity_check_server/include/path_validity_check_server/: path_validity_check_server.hpp
path_validity_check_server/src/: main.cpp  path_validity_check_server.cpp
