<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_human_dynamic_layer_costmap_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="andrew.israil@kiongroup.com">developer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>people_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <costmap_2d plugin="${prefix}/human_dynamic_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
